my-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user01-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user01-web
  template:
    metadata:
      labels:
        app: user01-web
    spec:
      containers:
        - name: user01-web-server
          image: registry.gitlab.com/nupassion201035/sdpx-devops
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: user01-web-service
  labels:
    app: user01-web-service
spec:
  selector:
    app: user01-web
  ports:
    - name: hello-part
      protocol: TCP
      port: 8082
      targetPort: 80
  type: ClusterIP
